change price table

--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -22,7 +22,7 @@
               team members
             </div>
             <div class="spec">
-              <span class="variable">1 GB</span>
+              <span class="variable">100 MB</span>
               disc space
             </div>
             <div class="spec">
@@ -51,8 +51,8 @@
               Free options
             </div>
             <div class="spec">
-              <span class="variable"> $1 x GB </span>
-              over 1 GB
+              <span class="variable"> $0.1 x MB </span>
+              over 100 MB
             </div>
             <div class="spec">
               <span class="variable">$0.1</span>
