--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <div id="footer" >
   <div class="container">
     <div class="row">
-      <div class="col-sm-3 copyright">
+      <div class="col-sm-2 copyright">
         Cenit, LLC 2015
       </div>
-      <div class="col-sm-6 menu">
+      <div class="col-sm-8 menu">
         <ul>
           <li >
             <%= link_to 'Home', "#{root_path}", :class => 'item' %>
@@ -18,9 +18,12 @@
           <li>
             <%= link_to 'Plans', "#{root_path}#pricing", :class => 'item' %>
           </li>
+          <li>
+            <%= link_to 'Documentation',ENV['DOC_URL'], :class => 'item' %>
+          </li>  
         </ul>
       </div>
-      <div class="col-sm-3 social">
+      <div class="col-sm-2 social">
         <a href="https://github.com/openjaf/cenit">
           <%=image_tag 'social/github-sociocon.png',:alt=>'github' %>
         </a>
