change workind documentation by docs

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
             <%= link_to 'Plans', "#{root_path}#pricing", :class => 'item' %>
           </li>
           <li>
-            <%= link_to 'Documentation',ENV['DOC_URL'], :class => 'item' %>
+            <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item' %>
           </li>  
         </ul>
       </div>
