Added app_log api, for report applications status

--- a/app/views/status/show.html.erb
+++ b/app/views/status/show.html.erb
@@ -2,4 +2,5 @@
 <%= render 'shared/page_header', title: title, home: false %>
 
 <%= render 'show', user: @user %>
+<% render 'status', user: @user %>
 
