--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,10 @@
 <header class="navbar navbar-inverse hero" role="banner">
   <div class="container">
+    
     <div class="navbar-header">
-      <%= link_to 'Cenit SaaS', root_path , :class => 'navbar-brand' %>
+      <%= link_to root_path , :class => 'navbar-brand' do %>
+        <%= image_tag 'cenit-logo.png',size: "51x26" %> CenitSaaS
+      <% end %>
     </div>
     <div class="sidebar-toggle">
       <div class="line"></div>
