initial stuff for api references page

--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -6470,16 +6470,16 @@ html.bg {
               color: #FFDF9D; }
             #docs #api-docs #methods .method .method-section .method-example pre .python [class*=params] {
               color: #9ECBEE; }
-          #docs #api-docs #methods .method .method-section .method-example pre .php {
+          #docs #api-docs #methods .method .method-section .method-example pre .bash {
             color: #DAE4F2; }
-            #docs #api-docs #methods .method .method-section .method-example pre .php > * {
+            #docs #api-docs #methods .method .method-section .method-example pre .bash > * {
               color: #DAE4F2;
               line-height: 20px; }
-            #docs #api-docs #methods .method .method-section .method-example pre .php [class*=keyword] {
+            #docs #api-docs #methods .method .method-section .method-example pre .bash [class*=keyword] {
               color: #9AB4DB; }
-            #docs #api-docs #methods .method .method-section .method-example pre .php [class*=string] {
+            #docs #api-docs #methods .method .method-section .method-example pre .bash [class*=string] {
               color: #DAD0C6; }
-            #docs #api-docs #methods .method .method-section .method-example pre .php [class*=comment] {
+            #docs #api-docs #methods .method .method-section .method-example pre .bash [class*=comment] {
               color: #B4B4B4; }
 
 #invoice {
