--- a/app/views/partnership/index.html.erb
+++ b/app/views/partnership/index.html.erb
@@ -18,21 +18,21 @@
             CenitSaaS
           </div>
           <div class="content">
-           <p> Nuestra visión es crear una red de  empresas que utilizando Odoo u otras soluciones de gestión empresarial puedan de forma sencilla, realizar transacciones B2B u  operaciones de sincronización de datos entre las empresas, así como integrarse a otros servicios empresariales disponibles en internet que brindan algún valor agregado para la comunicación, canales de ventas, gestión de inventario,  fulfilment, etc. </p>
+           <p> Nuestra visión es crear una red de  empresas que utilizando Odoo (nombrado también OpenERP) u otras soluciones de gestión empresarial puedan de forma sencilla, realizar transacciones B2B u  operaciones de sincronización de datos entre las empresas, así como integrarse a otros servicios empresariales disponibles en internet que brindan valor agregado para la comunicación, canales de ventas, gestión de inventario,  fullfilment, etc. </p>
 
-           <p> Para ello nos hemos propuesto crear una relación de transparencia y beneficio mutuo con las empresas que brindan servicios OpenERP.</p>
+           <p> Para ello nos hemos propuesto crear una relación de transparencia y beneficio mutuo con las empresas que brindan servicios en OpenERP.</p>
 
             <p>Estamos en disposición de transferir el know-how que posibilita brindar Odoo como SaaS, sin ningún tipo de gravement o costo asociado a la empresa. </p>
 
-            <p>La tecnología que hemos desarrollado es 100% Open Source y está disponibles en Github. Los módulos incluyen administración de la solución SaaS desde un OpenERP central, sincronización de datos entre OpenERP’s y transacciones B2B, entre otros elementos.</p>
+            <p>La tecnología que hemos desarrollado es 100% Open Source y está disponibles en Github. Los módulos incluyen administración de la solución SaaS desde un OpenERP central, sincronización de los datos entre varios OpenERP y transacciones B2B, entre otros funcionalidades.</p>
 
-            <p>Podemos asesorar (sin costos asociado) en la implementación de la infraestructura SaaS para su empresa, de modo que pueda usar sus propios nombres de dominios, en los servidores con que cuente la empresa. </p>
+            <p>Podemos asesorar (sin costos asociados) en la implementación de la infraestructura SaaS para su empresa, de modo que pueda usar sus propios nombres de dominios, en los servidores con que cuente la empresa. </p>
 
-            <p>Brindamos la opción de hacer el despligue de la infraestrucrura en los servidores de CenitSaaS, con la posibilidad de mantener sus propios dominios, o utilizar nuestro dominio cenitodoo.com si le resulta conveniente.</p>
+            <p>Brindamos la opción de hacer el despligue de la infraestructura en los servidores de CenitSaaS, con la posibilidad de mantener sus propios dominios, o utilizar nuestro dominio cenitodoo.com si le resultara conveniente.</p>
 
-            <p>En nuestros servidores el costo de despliegue es variable, solo se cobra en relación con el espacio utilizado, $0.1 USD x MB, con usuarios y módulos a instalar ilimitados. Este es nuestro precio público, su empresa puede manejar sus propios precios con relación a sus clientes.</p>
+            <p>Haciendo uso de nuestros servidores el costo de despliegue es variable, pues se cobra en relación con el espacio utilizado, $0.1 USD x MB, con usuarios y módulos a instalar ilimitados. Este es nuestro precio público, su empresa puede manejar sus propios precios con relación a sus clientes.</p>
 
-            <p>En su despliegue SaaS puede decidir qué módulos brinda como requeridos y cuáles como opcionales. </p>
+            <p>En su despliegue SaaS puede decidir qué módulos brindar como requeridos y cuáles como opcionales. </p>
 
             <p>El despliegue en nuestros servidores incluyen las garantías adicionales de escalabilidad, alta disponibilidad, backup automáticos y otros servicios de la infraestructura.</p>
 
@@ -43,7 +43,7 @@
 
             <p>En el interés de continuar perfeccionando nuestras soluciones nos interesa mantener una comunicación abierta sobre las funcionalidades a incluir en los módulos que desarrollamos.</p>
 
-            <p>Estamos abiertos a cualquier sugerencia que nos permita mejorar nuestro programa de partnership.</p>
+            <p>Estamos abiertos a cualquier sugerencia que nos permita mejorar nuestro programa de partnership. Contáctenos a través de <a>support@cenitsaas.com</a></p>
           </div>        
         </div>
       </div>
