improve post blog

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -30,7 +30,9 @@
               business data for a complete operational back-office automation using open source, social and community 
               friendly approach.
             </p>
-
+            <p>
+              
+            </p>
             <p>
               A common story for companies is the blending of solutions around its core business value. Features developed 
               by them, third-party's adaptations and others SaaS to facilitate operations.
@@ -53,7 +55,11 @@
               </p>
             </blockquote>
             <p>
-              But now all is more easy, because we are a team. 
+              But now all is more easy, the good news is that our team can build a simple SaaS application that automates dull parts of someone's job. 
+            </p>
+            <p>
+              Just now, finding customers as an early startup is one of the hardest tasks around. And it's harder when we don't have tens of thousands of twitter followers, a trendy blog, or a huge email list. 
+This post run you as one of the basic things we can do to get early customers when we aren't well-know. So this is the first of many post in our blog, see you folks!
             </p>
             <div class="main-pic">
               <%= image_tag 'team/sancho.jpg', :alt => 'commits first year', class: "img-rounded img-responsive", style: 'float: left;' %>
