change text in home page and blog post

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -19,7 +19,7 @@
           </div>
           <div class="content">
             <p>
-              Now we are close to celebrate our first anniversary next Jun 1st, 2015. At that time, there have been 
+              Now we are close to celebrate our first anniversary next Jun 1st. At that time, there have been 
               hard work, long hours of brainstorming and lots of valuable feedback from colleagues. Most of which added 
               some new functionality or fine-tuned some existing functionality at CenitSaaS. We've got a recap of our work 
               that want to share with you.
