--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<% title = 'Data Integrator and Online Business Management' %>
+<% title = 'Social Data and Business Integration' %>
 <%= render 'shared/page_header', title: title , home: true %>
 <%= render 'shared/features' %>
 <%= render 'shared/splitter' %>
