--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -31,7 +31,7 @@
             </div>
             <div class="spec">
               <span class="variable">Unlimited</span>
-              data interchange
+              data exchange
             </div>
           </div>
           <a class="btn-signup button-clear" href='<%= ref %>' >
@@ -60,7 +60,7 @@
             </div>
             <div class="spec">
               <span class="variable">$1</span>
-              x B2B EDI document
+              x B2B flow
             </div>
           </div>
           <a class="btn-signup button-clear" href='<%= ref %>' >
@@ -87,7 +87,7 @@
             </div>
             <div class="spec">
               <span class="variable">$0.5</span>
-              x B2B EDI document
+              x B2B flow
             </div>
           </div>
           <a data-toggle="modal" class="btn-signup button-clear" href="#contact_us">
