--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -35,25 +35,25 @@
       $("#sing_in_button").click(function (e) {
          $("#sing_in_form").show();
          $("#sing_up_form").hide();
-         $('#devise_error_messages').html('');
+         $('#devise_sing_in_error_messages').html('');
       });
 
       $("#sing_in_top").click(function (e) {
          $("#sing_in_form").show();
          $("#sing_up_form").hide();
-         $('#devise_error_messages').html('');
+         $('#devise_sing_in_error_messages').html('');
       });
 
       $("#sing_up_button").click(function (e) {
          $("#sing_in_form").hide();
          $("#sing_up_form").show();
-         $('#devise_error_messages').html('');
+         $('#devise_sing_up_error_messages').html('');
       });
       
       $(".sing_up_top").click(function (e) {
          $("#sing_in_form").hide();
          $("#sing_up_form").show();
-         $('#devise_error_messages').html('');
+         $('#devise_sing_up_error_messages').html('');
       });
 
       // triggers the off-canvas panel
