--- a/app/views/shared/_registration.html.erb
+++ b/app/views/shared/_registration.html.erb
@@ -9,13 +9,12 @@
           <div class="col-md-12">
             <div class="form-wrapper" >
               <h4>Enter in your account now or <a id='sing_up_button' href='#sing_up' class="demo">sign up</a></h4>
-              <div id='devise_error_messages' >
+              <div id='devise_sing_in_error_messages' >
                 <%= devise_error_messages! %>
                 <% flash.each do |key, message| %>
                   <div class="notice"><%= message %></div>
                 <% end %>
               </div>
-              <div id='devise_error_messages'></div>
               <%= form_for resource, as: :user, url: session_path(:user), remote: true, html: { role: 'form', class: 'form-inline' } do |f| %>
                 <div class="form-group">
                   <%= f.email_field :email, class: 'form-control', :placeholder => 'Email' %>
@@ -23,7 +22,7 @@
                 <div class="form-group">
                   <%= f.password_field :password, class: 'form-control', :placeholder => 'Password' %>
                 </div>
-                <%= f.submit 'Submit',:class => 'button button-small' %>
+                <%= f.submit 'Submit', :class => 'button button-small' %>
                 <a name='sing_in'></a>
               <% end %>
             </div>
@@ -38,13 +37,12 @@
           <div class="col-md-12">
             <div class="form-wrapper" >
               <h4>Ready to start? Create your free account now or <a id='sing_in_button' href='#sing_in' class="demo">sign in</a></h4>
-              <div id='devise_error_messages'>
+              <div id='devise_sing_up_error_messages'>
                 <%= devise_error_messages! %>
                 <% flash.each do |key, message| %>
                   <div class="notice"><%= message %></div>
                 <% end %>
               </div>
-  
               <%= form_for resource, as: :user, url: registration_path(:user), remote: true, html: { role: 'form', class: 'form-inline' } do |f| %>
                 <div class="form-group">
                   <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
@@ -55,7 +53,7 @@
                 <div class="form-group">
                   <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password Confirmation' %>
                 </div>
-                <%= f.submit 'Submit',:class => 'button button-small' %>
+                <%= f.submit 'Submit', :class => 'button button-small' %>
                 <a name='sing_up'></a>
               <% end %>
             </div>
@@ -91,5 +89,12 @@
      if (settings.url.match(/users/) && settings.type == 'POST') {
        window.location.reload();
      }
+  });
+  $(document).ajaxError(function(event, jqxhr, settings) {
+    if (settings.url.match(/sign_in/) && settings.type == 'POST') {
+      $('#devise_sing_in_error_messages').html(jqxhr.responseText);
+    } else if (settings.url.match(/sign_up/) && settings.type == 'POST') {
+      $('#devise_sing_up_error_messages').html(jqxhr.responseText);
+    }
   });
 </script>
