--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,6 +24,9 @@
         </ul>
       </div>
       <div class="col-sm-2 social">
+        <a href="http://www.linkedin.com/company/cenit-llc">
+          <%=image_tag 'social/in.png',:alt=>'linkedin' %>
+        </a>
         <a href="https://github.com/openjaf/cenit">
           <%=image_tag 'social/github-sociocon.png',:alt=>'github' %>
         </a>
