--- a/app/views/partnership/index.html.erb
+++ b/app/views/partnership/index.html.erb
@@ -18,32 +18,32 @@
             CenitSaaS
           </div>
           <div class="content">
-           <p> Nuestra visión es crear una red de  empresas que utilizando Odoo (nombrado también OpenERP) u otras soluciones de gestión empresarial puedan de forma sencilla, realizar transacciones B2B u  operaciones de sincronización de datos entre las empresas, así como integrarse a otros servicios empresariales disponibles en internet que brindan valor agregado para la comunicación, canales de ventas, gestión de inventario,  fullfilment, etc. </p>
+           <p> Nuestra visión es crear una red de empresas que utilizando Odoo (nombrado también OpenERP) u otras soluciones de gestión empresarial puedan de forma sencilla, realizar transacciones B2B u operaciones de sincronización de datos entre las empresas, así como integrarse a otros servicios empresariales disponibles en internet que brindan valor agregado para la comunicación, gestión de inventario, fullfilment, canales de ventas, etc. </p>
 
-           <p> Para ello nos hemos propuesto crear una relación de transparencia y beneficio mutuo con las empresas que brindan servicios en OpenERP.</p>
+           <p> Para ello nos hemos propuesto crear una relación de transparencia y beneficio mutuo con las empresas que brindan servicios en Odoo.</p>
 
-            <p>Estamos en disposición de transferir el know-how que posibilita brindar Odoo como SaaS, sin ningún tipo de gravement o costo asociado a la empresa. </p>
+            <p>Estamos en disposición de transferir el know-how que posibilita brindar Odoo como SaaS, sin ningún tipo de gravement o costo asociado a la empresa.  </p>
 
-            <p>La tecnología que hemos desarrollado es 100% Open Source y está disponibles en Github. Los módulos incluyen administración de la solución SaaS desde un OpenERP central, sincronización de los datos entre varios OpenERP y transacciones B2B, entre otros funcionalidades.</p>
+            <p>La tecnología que hemos desarrollado es 100% Open Source y está disponible en Github. Los módulos incluyen, administración de la solución SaaS desde un Odoo central, configuración y suscripción a planes de servicios, sincronización de los datos entre varios Odoo y transacciones B2B, entre otras funcionalidades.</p>
+            
+            <p>Desde un tenant central se puede decidir por cada tipo de plan cuáles módulos brindará como requeridos y cuáles como opcionales. </p>
 
-            <p>Podemos asesorar (sin costos asociados) en la implementación de la infraestructura SaaS para su empresa, de modo que pueda usar sus propios nombres de dominios, en los servidores con que cuente la empresa. </p>
+            <p>Podemos asesorarlos en la implementación de la infraestructura SaaS para su empresa. Brindamos la opción de hacer el despliegue de la infraestructura en los servidores de CenitSaaS, con la posibilidad de mantener su propio dominio, o utilizar nuestro dominio cenitsaas.com si le resulta conveniente. </p>
 
-            <p>Brindamos la opción de hacer el despligue de la infraestructura en los servidores de CenitSaaS, con la posibilidad de mantener sus propios dominios, o utilizar nuestro dominio cenitodoo.com si le resultara conveniente.</p>
+            <p>Si está interesado en evaluar la solución, facilitamos un servidor de pruebas en nuestra infraestructura con la solución montada y lista para usar, donde podrá observar las funciones de administración del servicio SaaS, crear tenant de prueba y evaluar de forma integral la solución.</p>
 
-            <p>Haciendo uso de nuestros servidores el costo de despliegue es variable, pues se cobra en relación con el espacio utilizado, $0.1 USD x MB, con usuarios y módulos a instalar ilimitados. Este es nuestro precio público, su empresa puede manejar sus propios precios con relación a sus clientes.</p>
+            <p>Haciendo uso de nuestros servidores el costo de despliegue es variable, pues se cobra en relación con el espacio utilizado, Si luego de esto se interesa en montar el servicio en producción, la mensualidad es de 100 USD o $0.1 USD x MB por encima 1 GB de espacio con usuarios y módulos a instalar ilimitados. Este es nuestro precio público, su empresa puede manejar sus propios precios ventas en relación a sus clientes.</p>
 
-            <p>En su despliegue SaaS puede decidir qué módulos brindar como requeridos y cuáles como opcionales. </p>
+            <p>Con el despliegue en nuestros servidores puede contar con las garantías adicionales de escalabilidad, alta disponibilidad, backup automáticos y otros servicios de nuestra infraestructura.</p>
 
-            <p>El despliegue en nuestros servidores incluyen las garantías adicionales de escalabilidad, alta disponibilidad, backup automáticos y otros servicios de la infraestructura.</p>
-
-            <p>Todos los SaaS incluirían (sin costo adicional) el módulo cenit-odoo, que permite la integración con otros OpenERP, terceras aplicaciones o servicios de internet tales como: </p>
+            <p>Todos los SaaS incluirían (sin costo adicional) nuestras herramientas para  la integración con otros Odoo, aplicaciones de terceros y/o servicios de internet tales como: </p>
             <p class='col-md-offset-1'>Fifthgear, Mds, Netsuite, Quiet Logistics, Salesforce, Shipstation, Abacos, Shipwire, Vtex, Hubspot, Fosdick, Quickbooks, Vend, Amazon, Mailchimp, Square, Jirafe, Mk Denial Service, Amazon S3, Desk, Mandrill, Twilio, Bronto, Dotcom, PCH, Exact Target, Tender, Zendesk, ...</p>
 
-            <p>Se aplicará  un fee sobre las transacciones comerciales a los clientes finales (como es el caso de las transacciones B2B), donde las empresas partnership recibirá un 25% del fee si en la transacción interviene algunos de sus clientes, o un 50% en caso que sea una transacción dos clientes de la misma empresa. ($1 USD x transacción B2B).</p>
+            <p>Se aplica una cuota sobre las transacciones comerciales a los clientes finales (como es el caso de las transacciones B2B), donde la empresa partner recibirá un 25% de la cuota si en la transacción interviene algunos de sus clientes, o un 50% en caso que sea una transacción entre dos clientes de la misma empresa. La cuota referida es $1 USD x transacción B2B.</p>
 
-            <p>En el interés de continuar perfeccionando nuestras soluciones nos interesa mantener una comunicación abierta sobre las funcionalidades a incluir en los módulos que desarrollamos.</p>
+            <p>Con el propósito de continuar perfeccionando nuestras soluciones nos interesa mantener una comunicación abierta sobre las funcionalidades a incluir en los módulos que desarrollamos y de forma general en el servicio que brindamos.</p>
 
-            <p>Estamos abiertos a cualquier sugerencia que nos permita mejorar nuestro programa de partnership. Contáctenos a través de <a>support@cenitsaas.com</a></p>
+            <p>Cualquier sugerencia que nos permita mejorar nuestro programa de partnership, contáctenos a través de <a>support@cenitsaas.com</a></p>
           </div>        
         </div>
       </div>
