Added free month trial

--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -19,7 +19,7 @@
             <%= link_to 'Data Integrator', new_user_registration_path, class: 'button' %>
             <%= link_to 'ERP & CRM', new_user_registration_path, class: 'button' %>
             
-            <%= link_to 'Sign in / up', new_user_session_path, class: 'demo', id: 'sign-in-link' %>
+            <%= link_to 'Sign in / Free trial', new_user_session_path, class: 'demo', id: 'sign-in-link' %>
           <% end %>
         </div>
         <div class="screenshot animated fadeInUp">
