--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,14 +9,12 @@
           <li >
             <%= link_to 'Home', "#{root_path}", :class => 'item' %>
           </li>
-          <li>
-            <%= link_to 'Data Integration', hub_path, :class => 'item' %>
-          </li>
+          <% link_to 'Data Integration', hub_path, :class => 'item' %>
           <li>
             <%= link_to 'ERP & CRM', "#{root_path}#services", :class => 'item' %>
           </li>
           <li>
-            <%= link_to 'Plans', "#{root_path}#pricing", :class => 'item' %>
+            <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item' %>
           </li>
           <li>
             <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item' %>
