--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,8 +1,8 @@
 <nav class="nav-menu">
   <h3>Menu</h3>
-  <%= link_to 'Data Integration', hub_path, :class => 'item' %>
+  <% link_to 'Data Integration', hub_path, :class => 'item' %>
   <%= link_to 'ERP & CRM', "#{root_path}#services", :class => 'item' %>
-  <%= link_to 'Plans', "#{root_path}#pricing", :class => 'item' %>
+  <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item' %>
   <% if current_user.present? %>
     <%= link_to 'Edit account', edit_user_registration_path %>
     <%= link_to 'Profile', status_path(current_user.id), :class => 'item' %>
