--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -7,7 +7,9 @@
           <% if user_signed_in? %>
 
            <% if (cenit_app = Doorkeeper::Application.where(name: 'Cenit').first).present? %>
-             <%= link_to "Data Integrator",cenithub_url(cenit_app), class: 'button' %>
+             <%= link_to "Data Integrator",'#', class: 'button' 
+             # cenithub_url(cenit_app)
+             %>
            <% end %>
            
            <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
