--- a/app/views/shared/_chart.html.erb
+++ b/app/views/shared/_chart.html.erb
@@ -24,7 +24,7 @@
                 <span class="icon entypo-user"></span>
                 25 hours
                 <div class="price" data-weekly="$800/weekly">
-                  $800 USD/week
+                  $800/week
                 </div>
               </div>
               <div class="specs">
@@ -46,7 +46,7 @@
                 <span class="icon entypo-users"></span>
                 50 hours
                 <div class="price">
-                  $1 700 USD/week
+                  $1 700/week
                 </div>
               </div>
               <div class="specs">
@@ -74,7 +74,7 @@
                 <span class="icon entypo-suitcase"></span>
                 100 hours
                 <div class="price">
-                  $3 050 USD/two weeks
+                  $3 050/two weeks
                 </div>
               </div>
               <div class="specs">
@@ -94,7 +94,10 @@
                   <span class="variable">Importation</span> form severals sources
                 </div>
                 <div class="spec">
-                  <span class="variable">Integration</span> wieth internet services
+                  <span class="variable">Integration</span> with internet services
+                </div>
+                <div class="spec">
+                  <span class="variable">Migration</span> data of previous versions
                 </div>
                 <div class="spec">
                   <span class="variable">Creation</span> of new add-ons
