--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -4,7 +4,7 @@
     <div class="row header">
       <h3>Need an easy way to connect internet services?</h3>
       <p>
-        Cenit is the perfect tool for help you.
+        Cenit is the perfect tool to help you out.
       </p>
     </div>
 
