set link to cenithub

--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -7,9 +7,7 @@
           <% if user_signed_in? %>
 
            <% if (cenit_app = Doorkeeper::Application.where(name: 'Cenit').first).present? %>
-             <%= link_to "Data Integrator",'#', class: 'button' 
-             # cenithub_url(cenit_app)
-             %>
+             <%= link_to "Data Integrator",cenithub_url(cenit_app), class: 'button' %>
            <% end %>
            
            <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
