move up to 1 GB free space

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Cenit Hub Saas" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "CenitSaaS" %></title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <%= stylesheet_link_tag "application", :media => "all" %>
