--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -22,7 +22,7 @@
               team members
             </div>
             <div class="spec">
-              <span class="variable">100 MB</span>
+              <span class="variable">1 GB</span>
               disc space
             </div>
             <div class="spec">
@@ -52,7 +52,7 @@
             </div>
             <div class="spec">
               <span class="variable"> $0.1 x MB </span>
-              over 100 MB
+              over 1 GB
             </div>
             <div class="spec">
               <span class="variable">$0.1</span>
