improved follow social buttons

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-2 copyright">
         Cenit, LLC 2015
       </div>
-      <div class="col-sm-8 menu">
+      <div class="col-sm-5 menu">
         <ul>
           <li >
             <%= link_to 'Home', "#{root_path}", :class => 'item' %>
@@ -21,14 +21,21 @@
           </li>  
         </ul>
       </div>
-      <div class="col-sm-2 social">
-        <a href="http://www.linkedin.com/company/cenit-llc">
-          <%=image_tag 'social/in.png',:alt=>'linkedin' %>
-        </a>
-        <a href="https://github.com/openjaf/cenit">
-          <%=image_tag 'social/github-sociocon.png',:alt=>'github' %>
-        </a>
+      <div class="col-sm-5 social">
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <div class=" g-follow" data-href="https://plus.google.com/109973562966126644452"
+                              data-height="20"
+                              data-rel="author"
+                              ></div>
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+        <script type="IN/FollowCompany" data-id="9436778" data-counter="right"></script>
+        <script src="https://apis.google.com/js/platform.js"></script>
+
+        <div class="g-ytsubscribe" data-channelid="UC7JVcEmA3BkiR2SZ_lx5lyA" data-layout="default" data-count="default">
+        </div>
+
       </div>
+
     </div>
   </div>
 </div>
@@ -46,3 +53,6 @@
    }
   });
  </script>
+  
+  
+  
