--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -14,11 +14,6 @@
 <% end  %>
   <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Contact Us</a>
   <div class="social">
-    <a href="http://www.linkedin.com/company/cenit-llc">
-      <%=image_tag 'social/in.png',:alt=>'linkedin' %>
-    </a>
-    <a href="https://github.com/openjaf/cenit">
-      <%=image_tag 'social/github-sociocon.png',:alt=>'github' %>
-    </a>
+    <div class="addthis_horizontal_follow_toolbox"></div>
   </div>
 </nav>
