--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,21 @@
 <header class="navbar navbar-inverse hero" role="banner">
   <div class="container">
-    
+
     <div class="navbar-header">
       <%= link_to root_path , :class => 'navbar-brand' do %>
         <%= image_tag 'cenit-logo.png',size: "51x26" %> CenitSaaS
       <% end %>
     </div>
-    <div class="sidebar-toggle">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
+
+    <div class='pull-right'>
+      <div class="sidebar-toggle">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <span id='sign-in'>
+        <%= link_to 'Sign in', new_user_session_path, class: 'navbar-brand demo pull-right', id: 'sign-in-link' %>
+      </span>
     </div>
   </div>
 </header>
