fixed sign out button

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,11 @@
         <div class="line"></div>
       </div>
       <span id='sign-in'>
-        <%= link_to 'Sign in', new_user_session_path, class: 'navbar-brand demo pull-right', id: 'sign-in-link' %>
+        <% unless user_signed_in? %>
+          <%= link_to 'Sign in', new_user_session_path, class: 'navbar-brand demo pull-right', id: 'sign-in-link' %>
+        <% else %>
+          <%= link_to "Sign out", destroy_user_session_path, class: 'navbar-brand demo pull-right', method: 'delete', id: 'sign-out-link' %>
+        <% end %>
       </span>
     </div>
   </div>
