--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -9,18 +9,18 @@
 *:focus {
   outline: 0; }
 
-a#sign-in-link {
+a#sign-in-link, a#sign-out-link {
   font-size: 20px !important;
   border: solid 2px;
   border-color: white;
   height: 10px;
   padding-top: 5px;
-  padding-bottom: 25px;
-  margin-top: 9px;
+  padding-bottom: 28px;
+  margin-top: 8px;
   margin-right: 10px;
 }
 
-a#sign-in-link:hover {
+a#sign-in-link:hover, a#sign-out-link:hover  {
   background-color: #ea7400;
   border-color: #ea7400;
   transition: .5s;
