changed margin for social icon in menu

--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -26,6 +26,10 @@ a#sign-in-link:hover, a#sign-out-link:hover  {
   transition: .5s;
 }
 
+.at300b {
+  margin-right: 10px !important;
+}
+
 .button {
   -webkit-font-smoothing: antialiased;
   display: inline-block;
