--- a/app/views/hub/index.html.erb
+++ b/app/views/hub/index.html.erb
@@ -1,7 +1,19 @@
 <% title = 'Open Source Data and Business Integration Hub' %>
 <%= render 'shared/page_header', title: title, home: false %>
-<%= render 'shared/features' %>
-<%= render 'shared/splitter' %>
 <%= render 'shared/services' %>
 <%= render 'shared/splitter' %>
+<%= render 'shared/features' %>
+<%= render 'shared/splitter' %>
 <% render 'shared/data_definitions' %>
+<div id="grid-first">
+  <div class="container">
+    <div class="row header">
+      <h3>Powerful transformation tools for data manipulation</h3>
+      <p>
+        Importing | Updating | Converting | Exporting
+      </p>
+    </div>
+  <%= image_tag 'flow.png',:class => 'img-responsive', :alt => 'flow'%>
+  </div>
+</div>
+<%= render 'shared/conversions' %>
