added carusel to home page

--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -30,6 +30,10 @@ a#sign-in-link:hover, a#sign-out-link:hover  {
   margin-right: 10px !important;
 }
 
+#home #slider {
+  margin-top: 30px !important;
+}
+
 .button {
   -webkit-font-smoothing: antialiased;
   display: inline-block;
