fixed footer loyout

--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -33,6 +33,10 @@ a#sign-in-link:hover, a#sign-out-link:hover  {
 #home #slider {
   margin-top: 30px !important;
 }
+#footer {
+  padding-top: 30px !important;
+  padding-bottom: 90px !important;
+}
 
 .button {
   -webkit-font-smoothing: antialiased;
