changed prices information

--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -8,8 +8,8 @@
   <div class="container">
     <div class="row header">
       <div class="col-md-12">
-        <h3>Begin and continue free if you want.</h3>
-        <p>Only pay extra space and a fee for successful comercial transactions</p>
+        <h3>Begin and continue free if you want</h3>
+        <p>Only pay extra space if you need</p>
       </div>
     </div>
     <div class="row charts">
@@ -43,7 +43,7 @@
       
       <div class="col-md-4">
         <div class="chart featured">
-          <div class="popular">Recomended</div>
+          <div class="popular">Extra space</div>
           <div class="plan-name">Variable</div>
           <div class="specs">
             <div class="spec">
@@ -51,16 +51,8 @@
               Free options
             </div>
             <div class="spec">
-              <span class="variable"> $0.1 x MB </span>
+              <span class="variable"> $10 USD x GB </span>
               over 1 GB
-            </div>
-            <div class="spec">
-              <span class="variable">$0.1</span>
-              x B2C order
-            </div>
-            <div class="spec">
-              <span class="variable">$1</span>
-              x B2B flow
             </div>
           </div>
           <a class="btn-signup button-clear" href='<%= ref %>' >
@@ -71,7 +63,7 @@
       
       <div class="col-md-4">
         <div class="chart last">
-          <div class="plan-name">Enterprise</div>
+          <div class="plan-name">Custom Enterprise</div>
           <div class="specs">
             <div class="spec">
               <span class="variable">Unlimited</span>
@@ -80,14 +72,6 @@
             <div class="spec">
               <span class="variable">Include</span>
               SaaS management
-            </div>
-            <div class="spec">
-              <span class="variable">$0.05</span>
-              x B2C order
-            </div>
-            <div class="spec">
-              <span class="variable">$0.5</span>
-              x B2B flow
             </div>
           </div>
           <a data-toggle="modal" class="btn-signup button-clear" href="#contact_us">
