--- a/app/views/shared/_chart.html.erb
+++ b/app/views/shared/_chart.html.erb
@@ -2,7 +2,7 @@
   <div id="tabs-option">
     <div class="container">
       <div class="row header">
-        <h3>Custom Data Integration Services & Odoo Implementation </h3>
+        <h3>Custom Development Services for Data Integration & Odoo Implementation </h3>
         <p>For some cases that you might also need</p>
       </div>
       <div class="row">
