--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -24,13 +24,16 @@
                 <div class="btn-nav prev"></div>
                 <div class="btn-nav next"></div>
                 <div class="slide active">
-                  <%= image_tag 'screenshots/webhooks.png', :alt => 'webhooks', style: "width: 740px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-admin.png', :alt => 'CenitHub Admin', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/dashboard.png', :alt => 'dashboard', style: "width: 740px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-flows.png', :alt => 'CenitHub Flows', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/shared_collections.png', :alt => 'shared_collections', style: "width: 740px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-shared.png', :alt => 'CenitHub Shared Collections', style: "width: 700px; height: 360px;" %>
+                </div>
+                <div class="slide">
+                  <%= image_tag 'screenshots/cenithub-translators.png', :alt => 'CenitHub Translators', style: "width: 700px; height: 360px;" %>
                 </div>
                 
               </div>
