--- a/app/assets/stylesheets/compiled/theme.scss
+++ b/app/assets/stylesheets/compiled/theme.scss
@@ -2556,7 +2556,7 @@ a:focus, button:focus {
       @media (max-width: 991px) {
         #home3 #grid-first .sections .section {
           margin-bottom: 40px; } }
-      #home3 #grid-first .sections .section .pic {
+      .section .pic {
         display: inline-block;
         padding: 15px;
         background: #f5f5f5;
