--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -1,13 +1,7 @@
+<% title = 'Public API Directory' %>
+<%= render 'shared/page_header', title: title, home: false %>
 <div id="grid-first">
   <div class="container">
-
-    <div class="row header">
-      <h3>Need an easy way to connect your backend apps with internet services?</h3>
-      <p>
-        CenitSaaS is the perfect tool to help you out.
-      </p>
-    </div>
-
-    <%= render partial: "item", collection: @items %>
+    <%= render partial: 'item', collection: @items %>
   </div>
 </div>
