--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -13,10 +13,10 @@
         We need to confirm your email address.
       </p>
       <p>
-        To complete the sign up process, please click the link below:
+        To complete the sign-up process, please click the link below and sign-in with your credentials:
       </p>
       <p>
-        <%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %>
+        <%= link_to 'Confirm account', confirmation_url(@resource, confirmation_token: @token) %>
       </p>
       <p>
         Thank you for sign-up in CenitSaaS!
