--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,11 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require bootstrap/bootstrap.min
+
  *= require compiled/theme
  *= require vendor/font-awesome
  *= require vendor/animate
  *= require vendor/style
 
- * require_tree .
  * require_self
+ * require_tree .
  */
